# fractal_analysis

./: C-A-analysis.ipynb  D0.tif  D0.tif.aux.xml  D1.tif  D1.tif.aux.xml  D2.tif  D2.tif.aux.xml  coloring_v6.py  delta_alpha.tif  delta_alpha.tif.aux.xml  delta_f.tif  delta_f.tif.aux.xml  learning.ipynb  mnist_simple_model.pth  multifractal.ipynb  multifractal_v2.ipynb  mutifractal.ipynb  pyproject.toml  temp.ipynb  tmp_2.ipynb
utils/: box_counting.py  box_counting_v2.py  fractal_map.py  multifractal.py  points_from_raster.py
